feat: make updating user roles from frontend work